Add Project Files

--- a/views/allParts/Projects.ejs
+++ b/views/allParts/Projects.ejs
@@ -3,7 +3,7 @@
   <div class="cert-card popup-up-section">
     <!-- Left: Certificate Image -->
     <div class="cert-image">
-      <img src="/projectimage/project1.png" alt="Certificate Thumbnail" />
+      <img src="/public/projectImage/project1.png" alt="Certificate Thumbnail" />
     </div>
 
     <!-- Right: Certificate Details -->
