--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -1,3 +1,4 @@
+
 <% layout("layouts/boilerplate") %>
 <a href="#Home" class="sticky-btn btn btn-danger">
   <i class="bi bi-arrow-up"></i>
@@ -6,9 +7,9 @@
 <div class="container py-5" id="Home">
   <div class="row align-items-center gy-5 gx-5">
     <!-- Left Section -->
-    <div class="col-12 col-md-8 popup-up-section">
+    <div class="col-12 col-md-8 popup-up-section detail">
       <h1 class="idx-h1">𝚂𝚞𝚖𝚊𝚗 𝙺𝚊𝚗𝚍𝚒</h1>
-      <h5 class="typing-text">Web Developer</h5>
+      <h5><span id="typing-text"></span></h5>
 
       <div class="d-flex flex-column flex-md-row gap-3 mt-3">
         <h6 class="mb-0">
