--- a/views/allParts/Education.ejs
+++ b/views/allParts/Education.ejs
@@ -6,7 +6,7 @@
     <div class="edu-details">
       <h3>Centurion University Of Technology & Management,Bhubaneswar</h3>
       <p>MCA</p>
-      <small>September 2025 - May 2027 • CGPA: 8.79/10</small>
+      <small>September 2025 - Present</small>
     </div>
   </div>
 
