--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -6,7 +6,7 @@
     <title>ꕶᴜᴍᴀɴ.</title>
     
 
-<link rel="alternate icon" type="image/png" href="/icon.png">
+<link rel="alternate icon" type="image/png" href="/dog.png">
 
 
     <link rel="stylesheet" href="/css/style.css" />
