--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -1,4 +1,3 @@
-
 <% layout("layouts/boilerplate") %>
 <a href="#Home" class="sticky-btn btn btn-danger">
   <i class="bi bi-arrow-up"></i>
@@ -19,7 +18,11 @@
       </div>
 
       <p class="mt-3">
-        Hey there, I’m Suman - a Full-Stack Web Developer skilled in the MERN stack (MongoDB, Express, React, Node.js). I build modern, user-focused web applications from the ground up, combining sleek design with powerful backend logic. Take a look around and see what I’ve been working on!
+        Hey there, I’m Suman — a Full-Stack Web Developer skilled in the MERN
+        stack (MongoDB, Express, React, Node.js ).ㅤ I build modern,
+        user-focused web applications from the ground up, combining sleek design
+        with powerful backend logic. Take a look around and see what I’ve been
+        working on!
       </p>
 
       <div class="mt-4 d-flex flex-wrap gap-3">
