--- a/views/allParts/Projects.ejs
+++ b/views/allParts/Projects.ejs
@@ -1,5 +1,5 @@
 <div id="Project">
-  <h2 class="Cert-head popup-up-section">Projects</h2>
+  <h2 class="Cert-head popup-up-section">Some of My Projects</h2>
   <div class="cert-card popup-up-section">
     <!-- Left: Certificate Image -->
     <div class="cert-image">
@@ -35,13 +35,26 @@
 
       <!-- View PDF Button -->
       <div class="view-btn-container">
-        <a
-          href="https://destination-booking.onrender.com/listings"
-          target="_blank"
-          class="view-btn"
-        >
-          <i class="bi bi-box-arrow-up-right"></i> Live Demo
-        </a>
+        <div class="row">
+          <div class="col-6">
+            <a
+              href="https://destination-booking.onrender.com/listings"
+              target="_blank"
+              class="view-btn"
+            >
+              <i class="bi bi-box-arrow-up-right"></i> Live Demo
+            </a>
+          </div>
+          <div class="col-6">
+            <a
+              href="https://github.com/SUMAN-7z/Destination-Booking"
+              target="_blank"
+              class="view-btn"
+            >
+              <i class="bi bi-box-arrow-up-right"></i>view Code
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
