--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -18,8 +18,8 @@
       </div>
 
       <p class="mt-3">
-        Hey there, I’m Suman — a Full-Stack Web Developer skilled in the MERN
-        stack (MongoDB, Express, React, Node.js ).ㅤ I build modern,
+        Hey there, I’m Suman — a Full-Stack Developer (MERN
+        stack). I build modern 
         user-focused web applications from the ground up, combining sleek design
         with powerful backend logic. Take a look around and see what I’ve been
         working on!
