--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -1,10 +1,10 @@
 <% layout("layouts/boilerplate") %>
-<a href="#Home" class="sticky-btn btn btn-danger">
+<a href="#Home" class="sticky-btn btn btn-danger ">
   <i class="bi bi-arrow-up"></i>
 </a>
 
-<div class="container py-5" id="Home">
-  <div class="row align-items-center gy-5 gx-5">
+<div class="container py-5 " id="Home">
+  <div class="row align-items-center gy-5 gx-5 ">
     <!-- Left Section -->
     <div class="col-12 col-md-8 popup-up-section detail">
       <h1 class="idx-h1">𝚂𝚞𝚖𝚊𝚗 𝙺𝚊𝚗𝚍𝚒</h1>
@@ -50,8 +50,9 @@
 
     <!-- Right Section -->
     <div
-      class="col-12 col-md-4 d-flex flex-column align-items-center justify-content-center popup-section"
-    >
+  class="col-12 col-md-4 d-none d-md-flex flex-column align-items-center justify-content-center popup-section "
+>
+
       <div class="box-main mb-3">
         <div class="icon-wrapper">
           <div class="floating-tag top-left wave-tilt">ReactJs</div>
@@ -183,7 +184,7 @@
         </div>
         <div class="icon-wrapper">
           <div class="floating-tag top-right wave-tilt">Express</div>
-          <div class="box pulse">
+          <div class="box pulse ">
             <svg
               class="svg-icon"
               xmlns="http://www.w3.org/2000/svg"
