--- a/views/allParts/Projects.ejs
+++ b/views/allParts/Projects.ejs
@@ -51,7 +51,7 @@
               target="_blank"
               class="view-btn"
             >
-              <i class="bi bi-box-arrow-up-right"></i>view Code
+              <i class="bi bi-github"></i> view Code
             </a>
           </div>
         </div>
