--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -1,10 +1,22 @@
+<style>
+  #backToTop {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease;
+  }
+
+  #backToTop.show {
+    opacity: 1;
+    visibility: visible;
+  }
+</style>
 <% layout("layouts/boilerplate") %>
-<a href="#Home" class="sticky-btn btn btn-danger ">
+<a href="#Home" class="sticky-btn btn btn-danger" id="backToTop">
   <i class="bi bi-arrow-up"></i>
 </a>
 
-<div class="container py-5 " id="Home">
-  <div class="row align-items-center gy-5 gx-5 ">
+<div class="container py-5" id="Home">
+  <div class="row align-items-center gy-5 gx-5">
     <!-- Left Section -->
     <div class="col-12 col-md-8 popup-up-section detail">
       <h1 class="idx-h1">𝚂𝚞𝚖𝚊𝚗 𝙺𝚊𝚗𝚍𝚒</h1>
@@ -18,11 +30,10 @@
       </div>
 
       <p class="mt-3">
-        Hey there, I’m Suman — a Full-Stack Developer (MERN
-        stack). I build modern 
-        user-focused web applications from the ground up, combining sleek design
-        with powerful backend logic. Take a look around and see what I’ve been
-        working on!
+        Hey there, I’m Suman — a Full-Stack Developer (MERN stack). I build
+        modern user-focused web applications from the ground up, combining sleek
+        design with powerful backend logic. Take a look around and see what I’ve
+        been working on!
       </p>
 
       <div class="mt-4 d-flex flex-wrap gap-3">
@@ -50,9 +61,8 @@
 
     <!-- Right Section -->
     <div
-  class="col-12 col-md-4 d-none d-md-flex flex-column align-items-center justify-content-center popup-section "
->
-
+      class="col-12 col-md-4 d-none d-md-flex flex-column align-items-center justify-content-center popup-section"
+    >
       <div class="box-main mb-3">
         <div class="icon-wrapper">
           <div class="floating-tag top-left wave-tilt">ReactJs</div>
@@ -184,7 +194,7 @@
         </div>
         <div class="icon-wrapper">
           <div class="floating-tag top-right wave-tilt">Express</div>
-          <div class="box pulse ">
+          <div class="box pulse">
             <svg
               class="svg-icon"
               xmlns="http://www.w3.org/2000/svg"
@@ -205,3 +215,13 @@ include("../allParts/Education.ejs")%> <%- include("../allParts/MySkills.ejs")%>
 <%- include("../allParts/Projects.ejs")%> <%-
 include("../allParts/certificate.ejs")%> <%-
 include("../allParts/ContactMe.ejs")%>
+
+<script>
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > 100) {
+      backToTop.classList.add("show");
+    } else {
+      backToTop.classList.remove("show");
+    }
+  });
+</script>
