--- a/views/allParts/MySkills.ejs
+++ b/views/allParts/MySkills.ejs
@@ -145,7 +145,7 @@
 
   <!-- Illustration Image -->
   <div class="skills-image">
-    <img src="/tree.svg" alt="Skills Illustration" />
+    <img src="tree.svg" alt="Skills Illustration" />
   </div>
 </div>
 
