--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -30,10 +30,16 @@
       </div>
 
       <p class="mt-3">
-        Hey there, I’m Suman — a Full-Stack Developer (MERN stack). I build
+        <!-- Hey there, I’m Suman — a Full-Stack Developer (MERN stack). I build
         modern user-focused web applications from the ground up, combining sleek
         design with powerful backend logic. Take a look around and see what I’ve
-        been working on!
+        been working on! -->
+        Hi, I’m Suman — a Full-Stack Developer specializing in the MERN stack. I
+        build modern, user-focused web applications that combine clean design
+        with strong backend systems. I’m also pursuing my MCA at CUTM to deepen
+        my expertise in computer applications and software development. Feel
+        free to explore my work and see how I create scalable, intuitive, and
+        impactful solutions.
       </p>
 
       <div class="mt-4 d-flex flex-wrap gap-3">
@@ -61,7 +67,7 @@
 
     <!-- Right Section -->
     <div
-      class="col-12 col-md-4 d-none d-md-flex flex-column align-items-center justify-content-center popup-section"
+      class="col-12 col-md-4  d-md-flex flex-column align-items-center justify-content-center popup-section"
     >
       <div class="box-main mb-3">
         <div class="icon-wrapper">
