adding new section scrolling

--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -67,7 +67,7 @@
 
     <!-- Right Section -->
     <div
-      class="col-12 col-md-4  d-md-flex flex-column align-items-center justify-content-center popup-section"
+      class="col-12 col-md-4 d-md-flex flex-column align-items-center justify-content-center popup-section"
     >
       <div class="box-main mb-3">
         <div class="icon-wrapper">
@@ -216,7 +216,9 @@
     </div>
   </div>
 </div>
-<%- include("../allParts/Experience.ejs")%> <%-
+<!-- middle Section -->
+<%- include("../allParts/infiScrol.ejs")%> <%-
+include("../allParts/Experience.ejs")%> <%-
 include("../allParts/Education.ejs")%> <%- include("../allParts/MySkills.ejs")%>
 <%- include("../allParts/Projects.ejs")%> <%-
 include("../allParts/certificate.ejs")%> <%-
