adding new section scrolling

--- a/views/allParts/infiScrol.ejs
+++ b/views/allParts/infiScrol.ejs
@@ -35,8 +35,7 @@
     flex-direction: column;
     gap: 2rem;
     padding: 0 1rem;
-    padding-top: 30px;
-    padding-top: 30px;
+    padding-top: 5rem;
   }
 
   /* marquee track */
