--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -46,8 +46,10 @@
 
 <!-- Preloader start-->
 <div id="preloader">
-  <div class="loader-ring"></div>
-  <div class="loading-text">Decrypting Experience...</div>
+  <div class="cube-loader">
+    <div class="cube"></div>
+  </div>
+  <div class="loading-text">Loading Universe...</div>
 </div>
 <!-- Preloader End-->
 
