--- a/views/allParts/MySkills.ejs
+++ b/views/allParts/MySkills.ejs
@@ -145,60 +145,100 @@
 
   <!-- Illustration Image -->
   <div class="skills-image">
-    <svg
-  width="240"
-  height="260"
-  viewBox="0 0 240 360"
+<svg
   xmlns="http://www.w3.org/2000/svg"
+  width="154"
+  height="243"
+  viewBox="0 0 154 243"
+  preserveAspectRatio="xMidYMid meet"
 >
+  <g transform="translate(0,243) scale(0.1,-0.1)" fill="#ff4d4d">
 
-  <!-- Bench / ground (NOT tilted) -->
-  <g
-    fill="none"
-    stroke="#ff2e2e"
-    stroke-width="4"
-    stroke-linecap="round"
-  >
-    <line x1="0" y1="220" x2="240" y2="220" />
-  </g>
+    <g transform="matrix(0.9994,0.0336,-0.0336,0.9994,43,-38)">
 
-  <!-- Character (tilted left) -->
-  <g
-    transform="rotate(-6 120 180)"
-    fill="none"
-    stroke="#ff2e2e"
-    stroke-width="4"
-    stroke-linecap="round"
-    stroke-linejoin="round"
-  >
+      <!-- Head -->
+      <path d="
+        M702 1979
+        c-64 -32 -82 -61 -82 -132
+        0 -116 62 -193 163 -204
+        94 -10 172 32 208 112
+        39 85 15 152 -75 213
+        -41 27 -57 32 -110 32
+        -42 0 -74 -7 -104 -21
+        z" />
 
-    <!-- Head -->
-    <circle cx="120" cy="70" r="28" />
-
-    <!-- Body (two loose strokes) -->
-    <path d="M112 102 c-14 52 -20 82 -30 118" />
-    <path d="M128 104 c12 50 20 80 28 116" />
-
-    <!-- Legs hanging -->
-    <path d="M86 220 c-8 36 -10 70 -8 110" />
-    <path d="M146 220 c26 42 34 70 38 110" />
-
-    <!-- Resting arm -->
-    <path d="M104 128 c-28 24 -40 42 -52 66" />
-
-    <!-- Raised waving arm -->
-    <path d="M134 114 c54 -36 82 -72 100 -126">
-      <animateTransform
-        attributeName="transform"
-        type="rotate"
-        values="-3 134 114; 6 134 114; -3 134 114"
-        dur="1s"
-        repeatCount="indefinite"
+      <!-- Backbone -->
+      <path
+        d="
+          M770 1840
+          C760 1700 755 1550 760 1380
+          C765 1220 770 1080 775 960
+        "
+        fill="none"
+        stroke="#ff4d4d"
+        stroke-width="22"
+        stroke-linecap="round"
       />
-    </path>
 
+      <!-- Right arm (raised) -->
+      <path d="
+        M814 1555
+        c-6 -55 -3 -140 27 -195
+        20 -38 65 -123 101 -188
+        6 -12 12 -20 14 -18
+        5 6 -25 75 -142 401
+        z" />
+
+      <!-- Right hand -->
+      <path d="
+         1370
+        c-18 -18 -12 -45 14 -58
+        14 -6 24 -6 38 0
+        26 13 32 40 14 58
+        -18 18 -44 18 -66 0
+        z" />
+
+      <!-- Left arm ONLY  -->
+      <path d="
+        M690 1460
+        c-30 -210 -90 -420 -155 -520
+        -10 -16 -10 -20 -2 -20
+        22 0 78 82 115 168
+        50 118 82 266 92 372
+        6 62 4 80 -8 80
+        -5 0 -15 -36 -22 -80
+        z" />
+
+      <!-- Right leg -->
+      <path d="
+        M1200 960
+        c-60 -10 -40 -20 50 -20
+        82 0 110 -6 140 -28
+        38 -28 54 -70 54 -140
+        0 -55 -28 -150 -70 -230
+        -12 -22 -14 -32 -6 -32
+        22 0 86 145 100 225
+        18 98 -6 173 -65 205
+        -38 20 -138 31 -203 20
+        z" />
+
+      <!-- Left leg -->
+      <path d="
+        M890 930
+        c-10 -6 -8 -10 8 -10
+        32 0 120 -40 158 -72
+        40 -34 50 -70 48 -180
+        -1 -50 -6 -100 -10 -113
+        -5 -14 -3 -25 4 -25
+        18 0 32 180 19 255
+        -10 55 -36 95 -82 123
+        -40 24 -122 39 -145 22
+        z" />
+
+    </g>
   </g>
 </svg>
+
 
   </div>
 </div>
