--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,6 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle at center, #050a15, #000);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,8 +113,10 @@ html {
     background-position: 0% 50%;
   }
 }
+/*Fullscreen Preloader end=== */
 
-/* === Loading Text === */
+
+/* typeing text animation Start */
 .loading-text {
   color: white;
   font-family: "Orbitron", sans-serif;
@@ -134,13 +135,12 @@ html {
     opacity: 1;
   }
 }
-
-/* === Hide animation === */
 .hidden {
   opacity: 0;
   visibility: hidden;
 }
-/*llscreen Preloader end=== */
+
+/* typeing text animation Start */
 
 .box {
   width: 145px !important;
