--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -18,6 +18,20 @@
     z-index: 999;
     cursor: pointer;
   }
+  #backToTop {
+    background: linear-gradient(
+      -60deg,
+      #a100ff,
+      #d300c0,
+      #ff006a,
+      #ff6a00,
+      #ff9500,
+      #ff6a00,
+      #a100ff
+    );
+    background-size: 500%;
+  }
+
 
   /* ✨ Hover effects */
   #backToTop:hover {
@@ -265,3 +279,4 @@ include("../allParts/Education.ejs")%> <%- include("../allParts/MySkills.ejs")%>
 <%- include("../allParts/Projects.ejs")%> <%-
 include("../allParts/certificate.ejs")%> <%-
 include("../allParts/ContactMe.ejs")%>
+
