--- a/views/allParts/infiScrol.ejs
+++ b/views/allParts/infiScrol.ejs
@@ -28,7 +28,7 @@
 
   /* marquee container */
   .marquee-container {
-    max-width: 1200px;
+    max-width: 100vw;
     margin: 4rem auto;
     overflow: hidden;
     display: flex;
@@ -143,9 +143,30 @@
       font-size: 0.85rem;
     }
   }
+
+
+.fade-box {
+
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 15%,
+    black 85%,
+    transparent
+  );
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 15%,
+    black 85%,
+    transparent
+  );
+}
+
+
 </style>
 
-<div class="marquee-container">
+<div class="marquee-container fade-box">
   <!-- Top row -->
   <div class="marquee" style="animation-duration: var(--speed-top)">
     <div class="card">
