--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
+  background: radial-gradient(circle at center, #050a15, #000);
   display: flex;
   flex-direction: column;
   justify-content: center;
