--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,11 +46,21 @@ html {
 }
 
 @keyframes neonFlow {
-  0% { background-position: 0% 50%; }
-  25% { background-position: 50% 100%; }
-  50% { background-position: 100% 50%; }
-  75% { background-position: 50% 0%; }
-  100% { background-position: 0% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 50% 100%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  75% {
+    background-position: 50% 0%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 /* ============================================================
@@ -70,17 +80,16 @@ html {
 }
 
 #greetings {
-  font-size: 60px;
-  color: white;
+  font-size: 40px;
+  color: #fff;
   position: absolute;
 }
 
-#mainContent  {
+#mainContent {
   visibility: hidden;
 }
 
 /*Fullscreen Preloader end=== */
-
 
 /* typeing text animation Start */
 .loading-text {
@@ -94,7 +103,8 @@ html {
 }
 
 @keyframes pulse {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 0.4;
   }
   50% {
@@ -975,7 +985,6 @@ body.dark-theme {
   --text-color: #000;
   --tag-bg: #7d797971;
   --border-color: #97b067;
-  
 }
 
 #Certificate {
