--- a/views/allParts/MySkills.ejs
+++ b/views/allParts/MySkills.ejs
@@ -145,7 +145,7 @@
 
   <!-- Illustration Image -->
   <div class="skills-image">
-<svg
+<!-- <svg
   xmlns="http://www.w3.org/2000/svg"
   width="154"
   height="243"
@@ -156,7 +156,6 @@
 
     <g transform="matrix(0.9994,0.0336,-0.0336,0.9994,43,-38)">
 
-      <!-- Head -->
       <path d="
         M702 1979
         c-64 -32 -82 -61 -82 -132
@@ -167,7 +166,6 @@
         -42 0 -74 -7 -104 -21
         z" />
 
-      <!-- Backbone -->
       <path
         d="
           M770 1840
@@ -180,7 +178,6 @@
         stroke-linecap="round"
       />
 
-      <!-- Right arm (raised) -->
       <path d="
         M814 1555
         c-6 -55 -3 -140 27 -195
@@ -189,7 +186,6 @@
         5 6 -25 75 -142 401
         z" />
 
-      <!-- Right hand -->
       <path d="
          1370
         c-18 -18 -12 -45 14 -58
@@ -198,7 +194,6 @@
         -18 18 -44 18 -66 0
         z" />
 
-      <!-- Left arm ONLY  -->
       <path d="
         M690 1460
         c-30 -210 -90 -420 -155 -520
@@ -209,7 +204,6 @@
         -5 0 -15 -36 -22 -80
         z" />
 
-      <!-- Right leg -->
       <path d="
         M1200 960
         c-60 -10 -40 -20 50 -20
@@ -222,7 +216,6 @@
         -38 20 -138 31 -203 20
         z" />
 
-      <!-- Left leg -->
       <path d="
         M890 930
         c-10 -6 -8 -10 8 -10
@@ -237,9 +230,8 @@
 
     </g>
   </g>
-</svg>
-
-
+</svg> -->
+<img src="/undraw_halloween-2025_o47f.svg" alt="Continuous learning">
   </div>
 </div>
 
