--- a/views/allParts/index.ejs
+++ b/views/allParts/index.ejs
@@ -319,8 +319,8 @@
 </div>
 <!-- middle Section -->
 <%- include("../allParts/infiScrol.ejs")%> <%-
-include("../allParts/Experience.ejs")%> <%-
-include("../allParts/Education.ejs")%> <%- include("../allParts/MySkills.ejs")%>
-<%- include("../allParts/Projects.ejs")%> <%-
-include("../allParts/certificate.ejs")%> <%-
+include("../allParts/Experience.ejs")%>
+<%-include("../allParts/Education.ejs")%> <%-
+include("../allParts/MySkills.ejs")%> <%- include("../allParts/Projects.ejs")%>
+<%- include("../allParts/certificate.ejs")%> <%-
 include("../allParts/ContactMe.ejs")%>
