--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ꕶᴜᴍᴀɴ.</title>
-    
-
-<link rel="alternate icon" type="image/png" href="/dog.png">
-
+<!-- https://www.flaticon.com/packs/origami-28 for favicol icon -->
+    <link rel="alternate icon" type="image/png" href="/dog.png" />
 
     <link rel="stylesheet" href="/css/style.css" />
     <link
