--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ꕶᴜᴍᴀɴ.</title>
-<!-- https://www.flaticon.com/packs/origami-28 for favicol icon -->
+
+<!-- https://www.flaticon.com/packs/origami-28 for favicol icon using in below -->
     <link rel="alternate icon" type="image/png" href="/dog.png" />
 
     <link rel="stylesheet" href="/css/style.css" />
